hphp/hack/test/typecheck/constraints/contravariance_constraint_bad_2.php.exp
File "contravariance_constraint_bad_2.php", line 43, characters 12-13:
Invalid return type (Typing[4323])
  File "contravariance_constraint_bad_2.php", line 14, characters 12-12:
  `T` is a constrained type parameter
  File "contravariance_constraint_bad_2.php", line 14, characters 17-19:
  This type constraint is violated
  File "contravariance_constraint_bad_2.php", line 14, characters 17-19:
  Expected `NAC\AAA`
  File "contravariance_constraint_bad_2.php", line 37, characters 33-33:
  But got `T as NAC\BBB`
  File "contravariance_constraint_bad_2.php", line 37, characters 33-33:
  This type argument to `NAC\CONTRA` only allows supertypes (it is contravariant)
